# krx_lm_train

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
configs/: cpo_config.yaml  sft_config.yaml
krx_lm_train/: cpo_train.py  sft_train.py  train.py  utils.py
tests/: test_sanity.py  test_utils.py
