[tool.poetry]
name = "krx-lm-train"
version = "0.1.0"
description = "lm train using unsloth"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.9"
unsloth = "2024.10.6"

[tool.poetry.dev-dependencies]
pytest = "4.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
