[tool.poetry]
name = "krx-lm-train"
version = "0.3.0"
description = "lm train using unsloth"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.9"
unsloth = "2024.10.7"
trl = "0.11.1"
transformers = "4.44.2"


[tool.poetry.dev-dependencies]
pytest = "7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
